# fastapi-todo-app-tutorial

./: README.md  compose.yml
.devcontainer/: compose.yml
.devcontainer/python/: Dockerfile  aqua.yaml  devcontainer.json  postCreateCommand.sh
.github/: copilot-instructions.md
.github/workflows/: devcontainer_ci.yml  python_ci.yml
python/: .envrc  .gitignore  Dockerfile  README.md  Taskfile.yml  entrypoint.sh  pyproject.toml  test_main.py
python/api/: db.py  main.py  migrate_db.py
python/api/cruds/: task.py
python/api/models/: task.py
python/api/routers/: done.py  task.py
python/api/schemas/: done.py  task.py
python/tests/: conftest.py  test_main.py  test_main2.py  test_migrate_db.py
