[project]
name = "fastapi-todo-app"
version = "0.1.0"
description = "fastapi-todo-app"
readme = "README.md"
requires-python = ">=3.14.2"
dependencies = [
    "aiomysql>=0.3.2",
    "fastapi[standard]>=0.128.0",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.14.13",
]
